did some more code

--- a/gp_print.css
+++ b/gp_print.css
@@ -18,22 +18,14 @@
 
 /* Hidden Objects */
 
-
+nav,
+footer,
+article {
+    display: none;
+}
 
 
 
 
 
 /* Comic Book Sheet Styles */
-
-
-
-
-
-
-
-
-
-
-
-
